--- a/blog.html
+++ b/blog.html
@@ -4,9 +4,9 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>AL AWEER AUTO SPARE PARTS - Car Repair & Auto Services HTML Template</title>
-    <meta name="description" content="Fixturbo - Car Repair & Auto Services HTML Template">
-    <meta name="keywords" content="Fixturbo - Car Repair & Auto Services HTML Template">
+    <title>AL AWEER AUTO SPARE PARTS  HTML Template</title>
+    <meta name="description" content="AL AWEER AUTO SPARE PARTS  HTML Template">
+    <meta name="keywords" content="AL AWEER AUTO SPARE PARTS  HTML Template">
     <meta name="robots" content="INDEX,FOLLOW">
 
     <!-- Mobile Specific Metas -->
@@ -63,13 +63,13 @@
     <div class="mobile-menu-wrapper">
         <div class="mobile-menu-area">
             <div class="mobile-logo">
-                <a href="index.html"><img src="assets/img/logo.png" alt="AlAweer" width="100" height="100"></a>
+                <a href="home-6.html"><img src="assets/img/logo.png" alt="AlAweer" width="100" height="100"></a>
                 <button class="menu-toggle"><i class="fa fa-times"></i></button>
             </div>
             <div class="mobile-menu">
                 <ul>
                     <li>
-                        <a href="#">Home</a>
+                        <a href="home-6.html">Home</a>
                         <!-- <ul class="sub-menu">
                             <li class="menu-item-has-children">
                                 <a href="#">Multipage</a>
@@ -90,7 +90,7 @@
                                         <a href="home-5.html">Home 05</a>
                                     </li> -->
                                     <!-- <li> -->
-                                        <a href="home-6.html"></a>
+                                        <!-- <a href="home-6.html"></a> -->
                                     <!-- </li>
                                 </ul> -->
                             </li>
@@ -121,12 +121,12 @@
                         </ul>
                     </li>
                     <li >
-                        <a href="#">Products</a>
+                        <a href="shop.html">Products</a>
                         <!-- <ul class="sub-menu">
                             <li><a href="team.html">Team Page</a></li>
                             <li><a href="team-details.html">Team Details</a></li> -->
                             <!-- <li> -->
-                                <a href="shop.html"></a>
+                                <!-- <a href="shop.html"></a> -->
                             <!-- </li> -->
                             <!-- <li><a href="shop-details.html">Shop Details</a></li>
                             <li><a href="cart.html">Cart</a></li>
@@ -159,9 +159,9 @@
                         </ul>
                     </li> -->
                     <li >
-                        <a href="#">Blog</a>
+                        <a href="blog.html">Blog</a>
                         <!-- <ul class="sub-menu"> -->
-                            <li><a href="blog.html">Blog</a></li>
+                            <!-- <li><a href="blog.html">Blog</a></li> -->
                             <!-- <li><a href="blog-details.html">Blog Details</a></li> -->
                         <!-- </ul> -->
                     </li>
@@ -211,20 +211,20 @@
             <!-- Main Menu Area -->
             <div class="menu-area">
                 <div class="header-navbar-logo">
-                    <a href="index.html"><img src="assets/img/logo.png" alt="logo" width="100" height="100"></a>
+                    <a href="home-6.html"><img src="assets/img/logo.png" alt="logo" width="100" height="100"></a>
                 </div>
                 <div class="container">
                     <div class="row align-items-center justify-content-lg-start justify-content-between">
                         <div class="col-auto d-xl-none d-block">
                             <div class="header-logo">
-                                <a href="index.html"><img src="assets/img/logo.png" alt="logo" width="100" height="100"></a>
+                                <a href="home-6.html"><img src="assets/img/logo.png" alt="logo" width="100" height="100"></a>
                             </div>
                         </div>
                         <div class="col-auto">
                             <nav class="main-menu d-none d-lg-inline-block">
                                 <ul>
                                     <li >
-                                        <a href="#">Home</a>
+                                        <a href="home-6.html">Home</a>
                                         <!-- <ul class="sub-menu">
                                             <li class="menu-item-has-children">
                                                 <a href="#">Multipage</a>
@@ -245,7 +245,7 @@
                                                         <a href="home-5.html">Home 05</a>
                                                     </li>
                                                     <li> -->
-                                                        <a href="home-6.html"></a>
+                                                        <!-- <a href="home-6.html"></a> -->
                                                     <!-- </li> -->
                                                 <!-- </ul> -->
                                             <!-- </li> -->
@@ -293,18 +293,18 @@
                                         </ul>
                                     </li> -->
                                     <li >
-                                        <a href="#">Blog</a>
+                                        <a href="blog.html">Blog</a>
                                         <!-- <ul class="sub-menu"> -->
-                                            <li><a href="blog.html"></a></li>
+                                            <!-- <li><a href="blog.html"></a></li> -->
                                             <!-- <li><a href="blog-details.html">Blog Details</a></li>
                                         </ul> -->
                                     </li>
                                     <li >
-                                        <a href="#">Products</a>
+                                        <a href="shop.html">Products</a>
                                         <!-- <ul class="sub-menu">
                                             <li><a href="team.html">Team Page</a></li>
                                             <li><a href="team-details.html">Team Details</a></li> -->
-                                            <a href="shop.html"></a>
+                                            <!-- <a href="shop.html"></a> -->
                                             <!-- <li><a href="shop-details.html">Shop Details</a></li>
                                             <li><a href="cart.html">Cart</a></li>
                                             <li><a href="checkout.html">Checkout</a></li>
@@ -347,7 +347,7 @@
                     <div class="breadcumb-content">
                         <h1 class="breadcumb-title">Blog Classic</h1>
                         <ul class="breadcumb-menu">
-                            <li><a href="index.html">Home</a></li>
+                            <li><a href="home-6.html">Home</a></li>
                             <li class="active">Blog Classic</li>
                         </ul>
                     </div>
@@ -533,7 +533,7 @@
     <div class="container">
         <div class="footer-top-1 bg-theme" style="background-image: url(assets/img/bg/footer-top-bg1-1.png);">
             <div class="footer-logo">
-                <a href="index.html"><img src="assets/img/logo.png" alt="AlAweer" width="100" height="100"></a>
+                <a href="home-6.html"><img src="assets/img/logo.png" alt="AlAweer" width="100" height="100"></a>
             </div>
             <div class="call-media-wrap">
                 <div class="icon">
